--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
                                  <span class="bg-indigo-100 text-indigo-700 text-xs font-medium px-2.5 py-0.5 rounded-full">Leadership</span>
                             </h3>
                             <div class="timeline-item-content">
-                                <h4 class="mt-2 text-md font-bold text-slate-900">President & Co-Founder, Gen Core Biology</h4>
+                                <h4 class="mt-2 text-md font-bold text-slate-900">President, <a href="https://gcbiology.org/" target="_blank" class="text-sky-600 hover:underline">Gen Core Biology</a></h4>
                                 <p class="text-sm text-slate-500">501(c)(3) Non-Profit</p>
-                                <p class="mt-2 text-slate-600">Co-founded and lead a global organization to democratize biology education, growing the platform to over 128K followers and 120M views across 12 international branches.</p>
+                                <p class="mt-2 text-slate-600">Lead a global organization to democratize biology education, growing the platform to over 128K followers and 120M views across 12 international branches.</p>
                             </div>
                         </div>
                     </div>
@@ -204,7 +204,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a2 2 0 01-2-2V4a2 2 0 012-2h8a2 2 0 012 2v4z" /></svg>
                         </div>
                         <h3 class="text-xl font-semibold text-slate-900">Science Communication</h3>
-                        <p class="mt-2 text-slate-600">Co-founded and lead Gen Core Biology, a global non-profit that leverages social media to make AP Biology concepts engaging and accessible, reaching millions of students worldwide.</p>
+                        <p class="mt-2 text-slate-600">Lead <a href="https://gcbiology.org/" target="_blank" class="text-sky-600 hover:underline">Gen Core Biology</a>, a global non-profit that leverages social media to make AP Biology concepts engaging and accessible, reaching millions of students worldwide.</p>
                     </div>
                     <!-- Card 3: Clinical -->
                     <div class="bg-slate-50 p-8 rounded-lg shadow-sm hover:shadow-lg transition-shadow">
